// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultData functional tests snapshot with value as number 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  border: 2px solid transparent;
  line-height: 1.1em;
  height: 100%;
  width: 100%;
  padding: 2px;
  white-space: nowrap;
  text-overflow: clip;
  overflow: hidden;
}

.emotion-0:focus {
  border: 2px solid salmon;
}

<div
  class="emotion-0 emotion-1"
  data-cell="result"
  data-location="B-2"
  tabindex="0"
>
  5
</div>
`;

exports[`ResultData functional tests snapshot with value as string 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  border: 2px solid transparent;
  line-height: 1.1em;
  height: 100%;
  width: 100%;
  padding: 2px;
}

.emotion-0:focus {
  border: 2px solid salmon;
}

<div
  class="emotion-0 emotion-1"
  data-cell="result"
  data-location="B-2"
  tabindex="0"
>
  test result
</div>
`;
